[package]
name = "hitool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Feature-gated facade for the HiTool Rust utility workspace."

[[example]]
name = "core_json"
required-features = ["core", "json"]

[[example]]
name = "json_object"
required-features = ["json"]

[[example]]
name = "http_client"
required-features = ["http"]

[[example]]
name = "crypto_hash"
required-features = ["crypto"]

[[example]]
name = "cache_demo"
required-features = ["cache"]

[lints]
workspace = true

[features]
default = ["core", "json"]
core = ["dep:hitool-core"]
serialization = ["core", "hitool-core/serialization"]
serialization-musli = ["serialization", "hitool-core/serialization-musli"]
musli-wire = ["serialization-musli", "hitool-core/musli-wire"]
musli-storage = ["serialization-musli", "hitool-core/musli-storage"]
musli-packed = ["serialization-musli", "hitool-core/musli-packed"]
musli-descriptive = ["serialization-musli", "hitool-core/musli-descriptive"]
aop = ["core", "dep:hitool-aop"]
bloom-filter = ["core", "dep:hitool-bloom-filter"]
cache = ["core", "dep:hitool-cache"]
cron = ["log", "dep:hitool-cron"]
crypto = ["dep:hitool-crypto"]
crypto-legacy = ["crypto", "hitool-crypto/legacy"]
db = ["json", "dep:hitool-db"]
db-postgres = ["db", "hitool-db/postgres"]
db-mysql = ["db", "hitool-db/mysql"]
db-sqlite = ["db", "hitool-db/sqlite"]
dfa = ["core", "dep:hitool-dfa"]
extra = ["core", "dep:hitool-extra"]
extra-image = ["extra", "hitool-extra/image"]
extra-mail = ["extra", "hitool-extra/mail"]
http = ["json", "dep:hitool-http"]
http-blocking = ["http", "hitool-http/blocking"]
log = ["dep:hitool-log"]
script = ["core", "dep:hitool-script"]
setting = ["json", "dep:hitool-setting"]
system = ["core", "dep:hitool-system"]
json = ["core", "dep:hitool-json"]
captcha-audio = ["hitool-captcha/audio"]
captcha-raster = ["hitool-captcha/raster"]
socket = ["log", "dep:hitool-socket"]
jwt = ["json", "crypto", "dep:hitool-jwt"]
ai = ["http", "json", "dep:hitool-ai"]
hutool-compat = ["core", "json", "dep:hitool-compat-hutool"]
full = [
    "core",
    "aop",
    "bloom-filter",
    "cache",
    "cron",
    "crypto",
    "db",
    "dfa",
    "extra",
    "extra-image",
    "extra-mail",
    "http",
    "log",
    "script",
    "setting",
    "system",
    "json",
    "captcha-audio",
    "captcha-raster",
    "socket",
    "jwt",
    "ai",
]

[dependencies]
hitool-ai = { workspace = true, optional = true }
hitool-aop = { workspace = true, optional = true }
hitool-bloom-filter = { workspace = true, optional = true }
hitool-cache = { workspace = true, optional = true }
hitool-captcha = { workspace = true, optional = true }
hitool-compat-hutool = { workspace = true, optional = true }
hitool-core = { workspace = true, optional = true }
hitool-cron = { workspace = true, optional = true }
hitool-crypto = { workspace = true, optional = true }
hitool-db = { workspace = true, optional = true }
hitool-dfa = { workspace = true, optional = true }
hitool-extra = { workspace = true, optional = true }
hitool-http = { workspace = true, optional = true }
hitool-json = { workspace = true, optional = true }
hitool-jwt = { workspace = true, optional = true }
hitool-log = { workspace = true, optional = true }
hitool-script = { workspace = true, optional = true }
hitool-setting = { workspace = true, optional = true }
hitool-socket = { workspace = true, optional = true }
hitool-system = { workspace = true, optional = true }
