[package]
name = "hutool-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core string, collection, codec, date, conversion, ID, and IO utilities for HiTool."

[[bench]]
name = "serialization"
harness = false
required-features = ["musli-wire", "musli-storage", "musli-packed", "musli-descriptive"]

[lints]
workspace = true

[features]
# `swing` 子包对齐 cn.hutool.core.swing,跨平台桌面/截屏/键鼠模拟。
# 默认不启用,因为引入平台特定依赖(open/xcap/enigo)。
default = []
swing = ["dep:open", "dep:xcap", "dep:enigo", "dep:image", "dep:url"]
# `img` 对齐 cn.hutool.core.img.ImgUtil（image crate 字节流语义）。
img = ["dep:image"]
# `async` 对齐 cn.hutool.core.thread.AsyncUtil,基于 Tokio JoinHandle/Future。
# 默认不启用,避免同步核心用户强制拉取 tokio runtime。
async = ["dep:tokio"]
# 生产级二进制序列化协议封套；不选择具体编码引擎。
serialization = ["dep:crc32fast"]
# Müsli 仅作为可选引擎，避免默认构建承担预 1.0 API 与二进制体积成本。
serialization-musli = ["serialization", "dep:musli"]
musli-wire = ["serialization-musli", "musli/wire"]
musli-storage = ["serialization-musli", "musli/storage"]
# Müsli packed 是 storage 编码的特化，依赖上游 `storage` Feature。
musli-packed = ["serialization-musli", "musli/storage"]
musli-descriptive = ["serialization-musli", "musli/descriptive"]

[dependencies]
base64.workspace = true
chrono.workspace = true
crc32fast = { workspace = true, optional = true }
data-encoding.workspace = true
encoding_rs.workspace = true
flate2.workspace = true
hex.workspace = true
idna.workspace = true
indexmap.workspace = true
num-bigint.workspace = true
parking_lot.workspace = true
murmur3 = "0.5"
cityhasher = "0.1"
percent-encoding.workspace = true
rand.workspace = true
regex.workspace = true
csv.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
md-5.workspace = true
musli = { workspace = true, optional = true }
thiserror.workspace = true
tempfile.workspace = true
unicode-general-category.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zip.workspace = true
quick-xml.workspace = true

# AsyncUtil 依赖(feature-gated,默认不启用)
# 对齐 cn.hutool.core.thread.AsyncUtil → tokio::task::JoinHandle / Future
tokio = { workspace = true, optional = true }

# Swing 子包依赖(feature-gated,默认不启用)
# 对齐 cn.hutool.core.swing:
# - DesktopUtil  → open     (跨平台调用系统默认浏览器/邮件/文件管理器)
# - ScreenUtil   → xcap     (跨平台屏幕捕获,Windows/macOS/Linux)
# - RobotUtil    → enigo    (跨平台键鼠模拟)
open = { version = "5", optional = true }
xcap = { version = "0.9", optional = true }
enigo = { version = "0.2", optional = true }
image = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
bincode.workspace = true
chrono.workspace = true
criterion.workspace = true
tempfile.workspace = true
postcard.workspace = true
proptest.workspace = true
