[package]
name = "hutool-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Structured annotation model aligned with cn.hutool.core.annotation for Hutool-Rust."

[lints]
workspace = true

[dependencies]
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true